[FIX] website: can't see edit button because css with overflow hidden for all tag. Aplly css only on carousel, paralax and blockquote
bzr revid: chm@openerp.com-20140314163639-l086jn568rtti5mv

--- a/addons/website/static/src/css/website.css
+++ b/addons/website/static/src/css/website.css
@@ -283,6 +283,8 @@ ul.nav-stacked > li > a {
 
 section, .carousel, .parallax, .row, .hr, .blockquote {
   min-height: 30px;
+}
+.carousel, .parallax, .blockquote {
   overflow: hidden;
 }
 
